--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About.me - Cledson Inoue</title>
     <link rel="stylesheet" href="CSS/styles.css">
 </head>
@@ -9,13 +10,30 @@
     <header>
         <nav class="menu">
           <ul>
-            <li><a href="#">About</a></li>
+            <li><a href="#">Life Achievements</a></li>
             <li><a href="#">Resume</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
         </nav>
+        <div>
        <h1 class="site-title">Cledson S. Inoue</h1>
        <h2 class="site-subtitle">Coordenador de TI</h2>
-     </header>   
+        </div>
+     </header>
+     <section>
+       <h2>Life Achievements</h2>
+       <figure>
+         <img class="img-about" src="./IMG/study.jpg" alt="Study">
+         <figcaption>Studying</figcaption>
+       </figure>
+       <figure>
+        <img class="img-about" src="./IMG/travel.jpg" alt="Travel">
+        <figcaption>Travelling</figcaption>
+       </figure>
+       <figure>
+        <img class="img-about" src="./IMG/work.jpg" alt="Work">
+        <figcaption>Working</figcaption>
+       </figure>
+     </section>
 </body>
 </html>
