Final da aula 3

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About.me - Cledson Inoue</title>
+    <title>Resume - Cledson Inoue</title>
     <link rel="stylesheet" href="CSS/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Luckiest+Guy&family=Orbitron:wght@500&display=swap" rel="stylesheet">
 
@@ -12,18 +12,21 @@
     <header>
         <nav class="menu">
           <ul>
-            <li><a href="#">About</a></li>
+            <li><a href="index.html">About</a></li>
             <li><a href="resume.html">Resume</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="#">Contact</a></li>
           </ul>
         </nav>
         <div>
-       <h1 class="site-title">Cledson Inoue</h1>
-       <h2 class="site-subtitle">Coordenador de TI</h2>
+       <h1 class="site-title">Social Media</h1>
+       <h2 class="site-subtitle">Facebook</h2>
+       <h2 class="site-subtitle">LinkedIn</h2>
+       <h2 class="site-subtitle">Twitter</h2>
+       <h2 class="site-subtitle">Instagram</h2>
         </div>
      </header>
-     <section class="about">
-       <h2>About</h2>
+     <section class="contact">
+       <h2>Facebook</h2>
 
        <div class="grid">
         <figure>
