--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About.me - Cledson Inoue</title>
+    <title>Resume - Cledson Inoue</title>
     <link rel="stylesheet" href="CSS/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Luckiest+Guy&family=Orbitron:wght@500&display=swap" rel="stylesheet">
 
@@ -12,18 +12,19 @@
     <header>
         <nav class="menu">
           <ul>
-            <li><a href="#">About</a></li>
-            <li><a href="resume.html">Resume</a></li>
+            <li><a href="index.html">About</a></li>
+            <li><a href="#">Resume</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
         <div>
-       <h1 class="site-title">Cledson Inoue</h1>
+       <h1 class="site-title">Experiências</h1>
        <h2 class="site-subtitle">Coordenador de TI</h2>
+       <h3 class="site-text">Teste teste teste teste. </h3>h3>
         </div>
      </header>
-     <section class="about">
-       <h2>About</h2>
+     <section class="experiencia">
+       <h2>Experiências Profissionais</h2>
 
        <div class="grid">
         <figure>
@@ -37,7 +38,7 @@
         <figure>
          <img class="img-about" src="./IMG/work.jpg" alt="Work">
          <figcaption>Working</figcaption>
-        </figure>
+        </figure> 
        </div>
     </section>
 </body>
