--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <title>Resume - Cledson Inoue</title>
     <link rel="stylesheet" href="CSS/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Luckiest+Guy&family=Orbitron:wght@500&display=swap" rel="stylesheet">
-
+    <script src="https://kit.fontawesome.com/7146e923a3.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -18,30 +18,51 @@
           </ul>
         </nav>
         <div>
-       <h1 class="site-title">Social Media</h1>
-       <h2 class="site-subtitle">Facebook</h2>
-       <h2 class="site-subtitle">LinkedIn</h2>
-       <h2 class="site-subtitle">Twitter</h2>
-       <h2 class="site-subtitle">Instagram</h2>
+          
+          <section class="contact" id="contact">
+             <div class="grid icons">
+              <a target="_blank" href="https://github.com/CledsonInoue">
+                <i class="fab fa-github"></i>
+              </a>
+              <a target="_blank" href="https://twitter.com/Cledsman">
+                <i class="fab fa-twitter-square"></i>
+              </a>
+              <a target="_blank" href="https://linkedin.com/in/CledsonInoue">
+                <i class="fab fa-linkedin"></i>
+              </a>
+              <a target="_blank" href="https://instagram.com/Cledsman">
+                <i class="fab fa-instagram"></i>
+              </a>
+              <a target="_blank" href="mailto:cledson.inoue@globo.com">
+                <i class="far fa-envelope"></i>
+              </a>
+             </div>
+            </section>
         </div>
      </header>
-     <section class="contact">
-       <h2>Facebook</h2>
 
-       <div class="grid">
-        <figure>
-          <img class="img-about" src="./IMG/study.jpg" alt="Study">
-          <figcaption>Studying</figcaption>
-        </figure>
-        <figure>
-         <img class="img-about" src="./IMG/travel.jpg" alt="Travel">
-         <figcaption>Travelling</figcaption>
-        </figure>
-        <figure>
-         <img class="img-about" src="./IMG/work.jpg" alt="Work">
-         <figcaption>Working</figcaption>
-        </figure>
+     <!--<section class="contact" id="contato">
+     
+      <h2>Contact</h2>
+
+
+       <div class="grid icons">
+        <a target="_blank" href="https://github.com/CledsonInoue">
+          <i class="fab fa-github"></i>
+        </a>
+        <a target="_blank" href="https://twitter.com/Cledsman">
+          <i class="fab fa-twitter-square"></i>
+        </a>
+        <a target="_blank" href="https://linkedin.com/in/CledsonInoue">
+          <i class="fab fa-linkedin"></i>
+        </a>
+        <a target="_blank" href="https://instagram.com/Cledsman">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a target="_blank" href="mailto:cledson.inoue@globo.com">
+          <i class="far fa-envelope"></i>
+        </a>
        </div>
-    </section>
+      </section> -->
 </body>
 </html>
