--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
     <title>Resume - Cledson Inoue</title>
     <link rel="stylesheet" href="CSS/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Luckiest+Guy&family=Orbitron:wght@500&display=swap" rel="stylesheet">
-
+    <script src="https://kit.fontawesome.com/7146e923a3.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -18,13 +18,13 @@
           </ul>
         </nav>
         <div>
-       <h1 class="site-title">Experiências</h1>
+       <h1 class="site-title">Resume</h1>
        <h2 class="site-subtitle">Coordenador de TI</h2>
        <h3 class="site-text">Teste teste teste teste. </h3>h3>
         </div>
      </header>
-     <section class="experiencia">
-       <h2>Experiências Profissionais</h2>
+     <section class="resume">
+       <h2>Resume</h2>
 
        <div class="grid">
         <figure>
