--- a/index.html
+++ b/index.html
@@ -6,23 +6,25 @@
     <title>About.me - Cledson Inoue</title>
     <link rel="stylesheet" href="CSS/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Luckiest+Guy&family=Orbitron:wght@500&display=swap" rel="stylesheet">
-
+    <script src="https://kit.fontawesome.com/7146e923a3.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <nav class="menu">
           <ul>
-            <li><a href="#">About</a></li>
+            <li><a href="#"><i class="fas fa-home"></i></i></a></li>
+            <li><a href="#about">About</a></li>
             <li><a href="resume.html">Resume</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <!--<li><a href="contact.html">Contact</a></li>-->
           </ul>
         </nav>
-        <div>
+        <div class="titulo" id="home">
        <h1 class="site-title">Cledson Inoue</h1>
        <h2 class="site-subtitle">Coordenador de TI</h2>
         </div>
      </header>
-     <section class="about">
+     <section class="about" id="about">
        <h2>About</h2>
 
        <div class="grid">
@@ -40,5 +42,24 @@
         </figure>
        </div>
     </section>
+    <section class="contact" id="contact">
+      <div class="grid icons">
+       <a target="_blank" href="https://github.com/CledsonInoue">
+         <i class="fab fa-github"></i>
+       </a>
+       <a target="_blank" href="https://twitter.com/Cledsman">
+         <i class="fab fa-twitter-square"></i>
+       </a>
+       <a target="_blank" href="https://linkedin.com/in/CledsonInoue">
+         <i class="fab fa-linkedin"></i>
+       </a>
+       <a target="_blank" href="https://instagram.com/Cledsman">
+         <i class="fab fa-instagram"></i>
+       </a>
+       <a target="_blank" href="mailto:cledson.inoue@globo.com">
+         <i class="far fa-envelope"></i>
+       </a>
+      </div>
+     </section>
 </body>
 </html>
